# OOP-Foltea-Iustin

./: README.md
lab-01/: p1  p1.c  p2.c  p3.cpp
lab-02/problema 1/: NumberList.cpp  NumberList.h  main.cpp
lab-02/problema 2/: CMakeLists.txt  Student.cpp  Student.h  StudentCompare.cpp  StudentCompare.h  main.cpp
lab-03/problema 1/: Math.cpp  Math.h  main.cpp
lab-03/problema 2/: Canvas.cpp  Canvas.h  main.cpp
lab-04/: Sort.cpp  Sort.h  main.cpp
lab-06/: BMW.cpp  BMW.h  Car.h  Circuit.cpp  Circuit.h  Fiat.cpp  Fiat.h  RangeRover.cpp  RangeRover.h  Seat.cpp  Seat.h  Volvo.cpp  Volvo.h  Weather.h  main.cpp
lab-07/problema 1/: literals.h  main.cpp
lab-07/problema 2/: Tree.h  main.cpp
